@@ -159,6 +159,7 @@ my $builder = $class->new(
         'File::Copy::Recursive'           => 0.38,
         'File::Find'                      => 0,
         'File::Find::Rule'                => 0,
+        'File::Inplace'                   => 0,
         'File::Path'                      => 0,
         'File::pushd'                     => 0,
         'File::Spec'                      => 0,
@@ -198,6 +199,7 @@ my $builder = $class->new(
         'File::Copy::Recursive'           => 0.38,
         'File::Find'                      => 0,
         'File::Find::Rule'                => 0,
+        'File::Inplace'                   => 0,
         'File::Path'                      => 0,
         'File::pushd'                     => 0,
         'File::Spec'                      => 0,
